# Big_Mart_Sales

./: .gitignore  .streamlit-ignore-poetry  Big_Mart_Sales_Notebook.ipynb  README.md  app.py  cleaned_data.csv  main.py  pyproject.toml  requirements.txt  setup.py
