[tool.poetry]
name = "big-mart-dashboard"
version = "0.1.0"
description = "Big Mart Sales Analytics Dashboard"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.49.1"
plotly = "^6.3.0"
pandas = "^2.3.2"
numpy = "^1.26.0"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
