[tool.poetry][tool.poetry]

name = "big-mart"name = "big-mart-dashboard"

version = "0.1.0"version = "0.1.0"

description = "Big Mart Sales Analytics Dashboard"description = "Big Mart Sales Analytics Dashboard"

readme = "README.md"readme = "README.md"

package-mode = falsepackage-mode = false



[tool.poetry.dependencies][tool.poetry.dependencies]

python = ">=3.11"python = ">=3.11"

streamlit = "^1.49.1"streamlit = "^1.49.1"

plotly = "^6.3.0"plotly = "^6.3.0"

pandas = "^2.3.2"pandas = "^2.3.2"

numpy = "^1.26.0"numpy = "^1.26.0"

statsmodels = "^0.14.0"statsmodels = "^0.14.0"



[build-system][build-system]

requires = ["poetry-core"]requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"build-backend = "poetry.core.masonry.api"

